Fixed select card header and footer spacing

--- a/scss/components/select/select.scss
+++ b/scss/components/select/select.scss
@@ -82,7 +82,13 @@
 
       > .ch-card-header,
       > .ch-card-footer {
-        @include ch-space-inset();
+        @include ch-media(to, tablet) {
+          @include ch-space-inset();
+        }
+
+        @include ch-media(from, desktop) {
+          @include ch-space-inset(default, s);
+        }
       }
 
       > .ch-card-header,
